--- a/spine.tex
+++ b/spine.tex
@@ -3,7 +3,7 @@
 %% Encoding: UTF-8
 %% Author: Yuan Xiaoshuai - yxshuai@gmail.com
 %% Created: 2012-03-02 20:24
-%% Last modified: 2016-08-28 20:57
+%% Last modified: 2016-08-28 23:06
 %%================================================
 \documentclass{article}
 \usepackage[papersize={8.66in,11.69in},
@@ -11,7 +11,7 @@
 \usepackage{graphicx}
 \usepackage[boldfont,slantfont,CJKnumber]{xeCJK}
 
-\setmainfont{Adobe Garamond Pro}
+\setmainfont{Times New Roman}
 \setCJKmainfont{Adobe Song Std}
 \setCJKfamilyfont{vert}[RawFeature={vertical}]{Adobe Song Std}
 
